--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Gustavo Restrepo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^15.6.0"
   }
