--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/app.js",
+    "start": "node dist/index.js",
     "build": "tsc",
-    "nodemon": "nodemon dist/app.js"
+    "nodemon": "nodemon dist/index.js"
   },
   "author": "Gustavo Restrepo",
   "license": "ISC",
