--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "author": "Gustavo Restrepo",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "mongoose": "^5.12.14"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.0"
   }
 }
