--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^15.6.0"
   }
