--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "typescript": "^4.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/express-fileupload": "^1.1.6",
-    "@types/jsonwebtoken": "^8.5.2",
+    "@types/cors": "^2.8.11",
+    "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.1.7",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^15.6.0"
+    "@types/node": "^15.14.1",
+    "@types/uuid": "^8.3.1",
+    "ts-node": "^10.0.0"
   }
 }
